--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="styless.css">
 </head>
 <body>
 <div class="container">
@@ -32,6 +32,6 @@
     <h2 class="game-notification"></h2>
     <button class="game-restart">Reset</button>    
 </div>
-<script src="index.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
